--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "import numpy as np\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -21,9 +21,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 9,
+   "source": [
+    "df = pd.read_csv(\"data/Physics 5BL Lab1.csv\")\r\n",
+    "df"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Trial  Ball Ruler  Ball Tape  Ball Caliper  Dowel Ruler  Dowel Tape  \\\n",
+       "0      1         1.8        1.9          1.88         30.4        30.5   \n",
+       "1      2         1.9        1.9          1.88         30.5        30.5   \n",
+       "2      3         1.9        1.9          1.87         30.5        30.6   \n",
+       "3      4         1.8        1.9          1.86         30.5        30.6   \n",
+       "4      5         1.7        1.8          1.88         30.5        30.6   \n",
+       "5      6         1.8        1.9          1.90         30.5        30.5   \n",
+       "\n",
+       "   Rolling Analog  Rolling Stopwatch  Metronone Analog  Metronome Stopwatch  \\\n",
+       "0             0.8               0.98               5.6                 6.16   \n",
+       "1             0.8               0.96               6.1                 6.10   \n",
+       "2             0.9               0.84               6.4                 6.07   \n",
+       "3             0.7               0.72               5.9                 6.13   \n",
+       "4             0.6               0.78               6.0                 6.04   \n",
+       "5             0.7               0.78               6.1                 6.21   \n",
+       "\n",
+       "   Ball Scale  Ball Spring  IOLab Scale  IOLab Spring  \n",
+       "0          26           26          203           200  \n",
+       "1          26           27          203           200  \n",
+       "2          25           26          203           200  \n",
+       "3          25           25          203           200  \n",
+       "4          25           25          203           202  \n",
+       "5          25           26          203           202  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Trial</th>\n",
+       "      <th>Ball Ruler</th>\n",
+       "      <th>Ball Tape</th>\n",
+       "      <th>Ball Caliper</th>\n",
+       "      <th>Dowel Ruler</th>\n",
+       "      <th>Dowel Tape</th>\n",
+       "      <th>Rolling Analog</th>\n",
+       "      <th>Rolling Stopwatch</th>\n",
+       "      <th>Metronone Analog</th>\n",
+       "      <th>Metronome Stopwatch</th>\n",
+       "      <th>Ball Scale</th>\n",
+       "      <th>Ball Spring</th>\n",
+       "      <th>IOLab Scale</th>\n",
+       "      <th>IOLab Spring</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>6.16</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>203</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>6.10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>27</td>\n",
+       "      <td>203</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>30.6</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>6.07</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>203</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>30.6</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>6.13</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>203</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>30.6</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.04</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>203</td>\n",
+       "      <td>202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>6.21</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>203</td>\n",
+       "      <td>202</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "df.mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Trial                    3.500000\n",
+       "Ball Ruler               1.816667\n",
+       "Ball Tape                1.883333\n",
+       "Ball Caliper             1.878333\n",
+       "Dowel Ruler             30.483333\n",
+       "Dowel Tape              30.550000\n",
+       "Rolling Analog           0.750000\n",
+       "Rolling Stopwatch        0.843333\n",
+       "Metronone Analog         6.016667\n",
+       "Metronome Stopwatch      6.118333\n",
+       "Ball Scale              25.333333\n",
+       "Ball Spring             25.833333\n",
+       "IOLab Scale            203.000000\n",
+       "IOLab Spring           200.666667\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
    "metadata": {}
   }
  ],
@@ -31,14 +243,22 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.1"
+   "version": "3.7.6",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.1 64-bit"
+   "display_name": "Python 3.7.6 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "63fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d"
+   "hash": "3b40c0205943e3cc11fab46d0de2702c66fee9971a8bd763cf59f3a7722aadbd"
   }
  },
  "nbformat": 4,
