--- a/lab6/lab6.ipynb
+++ b/lab6/lab6.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Intro Lab 4 Example Fit"
+    "# Lab 6"
    ],
    "metadata": {}
   },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "source": [
     "# Import packages\r\n",
     "import numpy as np\r\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "# x_dat = np.array([1.7444, 2.7244, 3.7044, 4.6746, 5.6546, 6.6346, 7.6146, 8.5946, 9.5746])\r\n",
     "# y_dat = np.array([0.0152, 0.0432, 0.068966667, 0.098, 0.1272, 0.1526, 0.1792, 0.2086, 0.235133333])\r\n",
@@ -91,17 +91,177 @@
     "\r\n",
     "g = 9.8\r\n",
     "\r\n",
-    "df = pd.read_csv(\"data\\Physics 5BL Lab 4.csv\", index_col=0)\r\n",
-    "delta_l_df = df - df[\"0\"].mean()\r\n",
-    "delta_l_df.columns = delta_l_df.columns.astype(int)\r\n",
-    "delta_l_df.columns = delta_l_df.columns / 1000 * g\r\n",
-    "delta_l_df = delta_l_df.drop(0.000, axis=1)\r\n",
-    "delta_l_df = delta_l_df / 100\r\n",
-    "x_dat = delta_l_df.columns.values\r\n",
-    "y_dat = delta_l_df.mean().values\r\n",
-    "y_err = delta_l_df.sem().values"
+    "df = pd.read_csv(\"data\\Physics 5BL Lab 6 Data.csv\", index_col=0)\r\n",
+    "# x_dat = delta_l_df.columns.values\r\n",
+    "# y_dat = delta_l_df.mean().values\r\n",
+    "# y_err = delta_l_df.sem().values"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "df.mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "diameter_disk       3.187\n",
+       "diameter_holder     3.186\n",
+       "0_disk             11.342\n",
+       "1_disk             13.925\n",
+       "3_disk             17.782\n",
+       "5_disk             20.999\n",
+       "7_disk             23.846\n",
+       "9_disk             26.525\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "df.sem()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "diameter_disk      0.001333\n",
+       "diameter_holder    0.001247\n",
+       "0_disk             0.021437\n",
+       "1_disk             0.031876\n",
+       "3_disk             0.039322\n",
+       "5_disk             0.020894\n",
+       "7_disk             0.027088\n",
+       "9_disk             0.034197\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "def calc_i(m, d):\r\n",
+    "    return 1/8 * m * d**2\r\n",
+    "\r\n",
+    "def calc_alpha_i(a_m, m, a_d, d):\r\n",
+    "    return np.sqrt((a_m**2)/(m**2) + (4*a_d**2)/(d**2))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "# disk holder\r\n",
+    "print(calc_i(50, df[\"diameter_holder\"].mean()))\r\n",
+    "print(calc_alpha_i(0.1, 50, df[\"diameter_holder\"].sem(), df[\"diameter_holder\"].mean()))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "63.441225\n",
+      "0.002147787425604595\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "# single disk\r\n",
+    "print(calc_i(20, df[\"diameter_disk\"].mean()))\r\n",
+    "print(calc_alpha_i(0.1, 50, df[\"diameter_disk\"].sem(), df[\"diameter_disk\"].mean()))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "25.392422499999995\n",
+      "0.0021679763319478232\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "df.mean() / 10"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "diameter_disk      0.3187\n",
+       "diameter_holder    0.3186\n",
+       "0_disk             1.1342\n",
+       "1_disk             1.3925\n",
+       "3_disk             1.7782\n",
+       "5_disk             2.0999\n",
+       "7_disk             2.3846\n",
+       "9_disk             2.6525\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "df.sem() / 10"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "diameter_disk      0.000133\n",
+       "diameter_holder    0.000125\n",
+       "0_disk             0.002144\n",
+       "1_disk             0.003188\n",
+       "3_disk             0.003932\n",
+       "5_disk             0.002089\n",
+       "7_disk             0.002709\n",
+       "9_disk             0.003420\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
    "metadata": {}
   },
   {
